tests/dataset/tpc-h/compiler/cpp/q1.error
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:242:21: error: no match for ‘operator==’ (operand types are ‘Result’ and ‘Result’)
  242 |         if (__g.key == __key) {
      |             ~~~~~~~ ^~ ~~~~~
      |                 |      |
      |                 Result Result
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:276:39: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  276 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                     ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/string:48,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:3:
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:276:66: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  276 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                                                  ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:276:66: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  276 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                                                  ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:276:39: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  276 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                     ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:276:66: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  276 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                                                  ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:276:66: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  276 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                                                  ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:276:80: error: template argument 1 is invalid
  276 |                                   ((1 - std::declval<Lineitem>().l_discount))))>
      |                                                                                ^
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:276:80: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:279:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  279 |               __items.push_back((x.l_extendedprice * ((1 - x.l_discount))));
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:279:58: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  279 |               __items.push_back((x.l_extendedprice * ((1 - x.l_discount))));
      |                                                        ~ ^ ~~~~~~~~~~~~
      |                                                        |     |
      |                                                        int   std::any
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:279:62: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  279 |               __items.push_back((x.l_extendedprice * ((1 - x.l_discount))));
      |                                                              ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:279:62: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  279 |               __items.push_back((x.l_extendedprice * ((1 - x.l_discount))));
      |                                                              ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:3)> [with auto:3 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:274:13:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:273:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  273 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:273:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  273 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:288:22: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  288 |                  ((1 - std::declval<Lineitem>().l_discount))) *
      |                    ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:288:49: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  288 |                  ((1 - std::declval<Lineitem>().l_discount))) *
      |                                                 ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:288:49: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  288 |                  ((1 - std::declval<Lineitem>().l_discount))) *
      |                                                 ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:21: error: no match for ‘operator+’ (operand types are ‘int’ and ‘std::any’)
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                   ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:634:5: note: candidate: ‘template<class _Iterator> constexpr std::reverse_iterator<_Iterator> std::operator+(typename reverse_iterator<_Iterator>::difference_type, const reverse_iterator<_Iterator>&)’
  634 |     operator+(typename reverse_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:634:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note: candidate: ‘template<class _Iterator> constexpr std::move_iterator<_IteratorL> std::operator+(typename move_iterator<_IteratorL>::difference_type, const move_iterator<_IteratorL>&)’
 1808 |     operator+(typename move_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
In file included from /usr/include/c++/13/string:54:
/usr/include/c++/13/bits/basic_string.h:3553:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3553 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3553:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3571:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3571 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3571:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘const _CharT*’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3590:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3590 |     operator+(_CharT __lhs, const basic_string<_CharT,_Traits,_Alloc>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3590:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3607:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3607 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3607:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3625:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, _CharT)’
 3625 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs, _CharT __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3637:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3637 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3637:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3644:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3644 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3644:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3651:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3651 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3651:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3674:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3674 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3674:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘const _CharT*’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3681:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3681 |     operator+(_CharT __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3681:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   ‘std::any’ is not derived from ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3688:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const _CharT*)’
 3688 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3688:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3695:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, _CharT)’
 3695 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3695:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:288:22: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  288 |                  ((1 - std::declval<Lineitem>().l_discount))) *
      |                    ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:288:49: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  288 |                  ((1 - std::declval<Lineitem>().l_discount))) *
      |                                                 ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:288:49: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  288 |                  ((1 - std::declval<Lineitem>().l_discount))) *
      |                                                 ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:21: error: no match for ‘operator+’ (operand types are ‘int’ and ‘std::any’)
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                   ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:634:5: note: candidate: ‘template<class _Iterator> constexpr std::reverse_iterator<_Iterator> std::operator+(typename reverse_iterator<_Iterator>::difference_type, const reverse_iterator<_Iterator>&)’
  634 |     operator+(typename reverse_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:634:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note: candidate: ‘template<class _Iterator> constexpr std::move_iterator<_IteratorL> std::operator+(typename move_iterator<_IteratorL>::difference_type, const move_iterator<_IteratorL>&)’
 1808 |     operator+(typename move_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3553:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3553 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3553:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3571:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3571 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3571:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘const _CharT*’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3590:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3590 |     operator+(_CharT __lhs, const basic_string<_CharT,_Traits,_Alloc>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3590:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3607:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3607 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3607:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3625:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, _CharT)’
 3625 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs, _CharT __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3637:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3637 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3637:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3644:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3644 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3644:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3651:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3651 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3651:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3674:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3674 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3674:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘const _CharT*’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3681:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3681 |     operator+(_CharT __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3681:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   ‘std::any’ is not derived from ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3688:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const _CharT*)’
 3688 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3688:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/usr/include/c++/13/bits/basic_string.h:3695:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, _CharT)’
 3695 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3695:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:48: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                ^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:57: error: template argument 1 is invalid
  289 |                 ((1 + std::declval<Lineitem>().l_tax))))>
      |                                                         ^
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:289:57: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:292:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  292 |               __items.push_back(((x.l_extendedprice * ((1 - x.l_discount))) *
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:292:59: error: no match for ‘operator-’ (operand types are ‘int’ and ‘std::any’)
  292 |               __items.push_back(((x.l_extendedprice * ((1 - x.l_discount))) *
      |                                                         ~ ^ ~~~~~~~~~~~~
      |                                                         |     |
      |                                                         int   std::any
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:292:63: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  292 |               __items.push_back(((x.l_extendedprice * ((1 - x.l_discount))) *
      |                                                               ^~~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:292:63: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  292 |               __items.push_back(((x.l_extendedprice * ((1 - x.l_discount))) *
      |                                                               ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:38: error: no match for ‘operator+’ (operand types are ‘int’ and ‘std::any’)
  293 |                                  ((1 + x.l_tax))));
      |                                    ~ ^ ~~~~~~~
      |                                    |     |
      |                                    int   std::any
/usr/include/c++/13/bits/stl_iterator.h:634:5: note: candidate: ‘template<class _Iterator> constexpr std::reverse_iterator<_Iterator> std::operator+(typename reverse_iterator<_Iterator>::difference_type, const reverse_iterator<_Iterator>&)’
  634 |     operator+(typename reverse_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:634:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note: candidate: ‘template<class _Iterator> constexpr std::move_iterator<_IteratorL> std::operator+(typename move_iterator<_IteratorL>::difference_type, const move_iterator<_IteratorL>&)’
 1808 |     operator+(typename move_iterator<_Iterator>::difference_type __n,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1808:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/usr/include/c++/13/bits/basic_string.h:3553:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3553 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3553:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/usr/include/c++/13/bits/basic_string.h:3571:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3571 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3571:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   mismatched types ‘const _CharT*’ and ‘int’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/usr/include/c++/13/bits/basic_string.h:3590:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3590 |     operator+(_CharT __lhs, const basic_string<_CharT,_Traits,_Alloc>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3590:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/usr/include/c++/13/bits/basic_string.h:3607:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3607 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3607:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/usr/include/c++/13/bits/basic_string.h:3625:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, _CharT)’
 3625 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs, _CharT __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3625:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/usr/include/c++/13/bits/basic_string.h:3637:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3637 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3637:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/usr/include/c++/13/bits/basic_string.h:3644:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3644 |     operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3644:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/usr/include/c++/13/bits/basic_string.h:3651:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3651 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3651:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/usr/include/c++/13/bits/basic_string.h:3674:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(const _CharT*, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3674 |     operator+(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3674:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   mismatched types ‘const _CharT*’ and ‘int’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/usr/include/c++/13/bits/basic_string.h:3681:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(_CharT, __cxx11::basic_string<_CharT, _Traits, _Allocator>&&)’
 3681 |     operator+(_CharT __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3681:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   ‘std::any’ is not derived from ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/usr/include/c++/13/bits/basic_string.h:3688:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, const _CharT*)’
 3688 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3688:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/usr/include/c++/13/bits/basic_string.h:3695:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::__cxx11::basic_string<_CharT, _Traits, _Allocator> std::operator+(__cxx11::basic_string<_CharT, _Traits, _Allocator>&&, _CharT)’
 3695 |     operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3695:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:293:42: note:   mismatched types ‘std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  293 |                                  ((1 + x.l_tax))));
      |                                          ^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:4)> [with auto:4 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:285:13:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:284:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  284 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:284:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  284 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:314:32: error: no matching function for call to ‘std::vector<double>::push_back(std::any&)’
  314 |               __items.push_back(x.l_discount);
      |               ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCHQueriesq12235172439/001/prog.cpp:8:
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = double; _Alloc = std::allocator<double>; value_type = double]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::vector<double>::value_type&’ {aka ‘const double&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = double; _Alloc = std::allocator<double>; value_type = double]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘std::any’ to ‘std::vector<double>::value_type&&’ {aka ‘double&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
